redis (2:2.8.0-1) UNRELEASED; urgency=low

  * New upstream release.
  * Update debian/patches/02-fix-ftbfs-on-kfreebsd.

 -- Chris Lamb <lamby@debian.org>  Fri, 22 Nov 2013 16:26:10 +0000

redis (2:2.6.16-3) unstable; urgency=low

  * Add missing Replaces and Breaks to redis-tools. Thanks to Andreas Beckmann
    (anbe). (Closes: #723703)

 -- Chris Lamb <lamby@debian.org>  Fri, 20 Sep 2013 14:35:24 +0100

redis (2:2.6.16-2) unstable; urgency=low

  * Completely rework and refresh debian/copyright. (Closes: #723162)
  * Update website in debian/copyright.
  * Drop client library references from debian/copyright (dropped in
    2:1.1.90~beta-1).
  * Update main copyright year.

 -- Chris Lamb <lamby@debian.org>  Tue, 17 Sep 2013 19:08:01 +0100

redis (2:2.6.16-1) unstable; urgency=low

  * New upstream release.
  * Split non-server binaries into redis-tools package. (Closes: #723006)
  * Update debian/watch.

 -- Chris Lamb <lamby@debian.org>  Mon, 16 Sep 2013 09:53:49 +0100

redis (2:2.6.14-2) unstable; urgency=low

  * Source /lib/lsb/init-functions in initscript for systemd compatibility.

 -- Chris Lamb <lamby@debian.org>  Mon, 12 Aug 2013 16:17:47 +0100

redis (2:2.6.14-1) unstable; urgency=low

  * New upstream release.

 -- Chris Lamb <lamby@debian.org>  Tue, 06 Aug 2013 12:14:12 +0100

redis (2:2.6.13-1) unstable; urgency=low

  * New upstream release.
    - Sync debian/redis.conf.
    - Update 02-fix-ftbfs-on-kfreebsd.diff.

 -- Chris Lamb <lamby@debian.org>  Mon, 17 Jun 2013 00:49:42 +0100

redis (2:2.6.7-1) unstable; urgency=low

  * New upstream release.
  * Add missing "status" command from usage. Thanks to Dererk
    <dererk@debian.org>. (Closes: #696339)
  * Enable building on kfreebsd-amd64 (and possibly kfreebsd-i386 and
    hurd-i386) by not depending on 'jemalloc' which would not be used anyway.
    Thanks to Jeff Epler <jepler@unpythonic.net>. (Closes: #696618)

 -- Chris Lamb <lamby@debian.org>  Fri, 28 Dec 2012 17:00:06 +0000
