@@ -5,14 +5,15 @@ Author: Chris Lamb <lamby@debian.org>
 
 --- redis-2.4.2.orig/src/Makefile
 +++ redis-2.4.2/src/Makefile
-@@ -72,8 +72,7 @@
+@@ -79,9 +79,8 @@ ifeq ($(MALLOC),tcmalloc_minimal)
+ endif
  
  ifeq ($(MALLOC),jemalloc)
--  DEPENDENCY_TARGETS+= jemalloc
--  FINAL_CFLAGS+= -DUSE_JEMALLOC -I../deps/jemalloc/include
--  FINAL_LIBS+= ../deps/jemalloc/lib/libjemalloc.a -ldl
-+  FINAL_CFLAGS+= -DUSE_JEMALLOC -I/usr/include/jemalloc
-+  FINAL_LIBS+= -ljemalloc
+-	DEPENDENCY_TARGETS+= jemalloc
+-	FINAL_CFLAGS+= -DUSE_JEMALLOC -I../deps/jemalloc/include
+-	FINAL_LIBS+= ../deps/jemalloc/lib/libjemalloc.a -ldl
++	FINAL_CFLAGS+= -DUSE_JEMALLOC -I/usr/include/jemalloc/include
++	FINAL_LIBS+= = -ljemalloc
  endif
  
  REDIS_CC=$(QUIET_CC)$(CC) $(FINAL_CFLAGS)
