@@ -1,7 +1,8 @@
 redis (2:2.8.0-1) UNRELEASED; urgency=low
 
   * New upstream release.
-  * Update debian/patches/02-fix-ftbfs-on-kfreebsd.
+    - Update debian/patches/02-fix-ftbfs-on-kfreebsd.
+    - Update debian/patches/03-use-system-jemalloc.diff.
 
  -- Chris Lamb <lamby@debian.org>  Fri, 22 Nov 2013 16:26:10 +0000
 
